@@ -1,7 +1,6 @@
 0.9.1
 + Location of thumbpane?
 + assert errors involving thumbpane..
-+ modify img, go to neighbor img, don't save -> need to update preloadimg!
 + small img height in thumbpane sometimes?
 
 1.0
